# PCObserver

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
CustomerApp/: Application.py  Client.py  setup.py
CustomerApp/config/: defaults.py
app/: Bot.py  Tokkens.py
app/Application/: PCObserver.py
botapp/: __init__.py  __main__.py  conftest.py  models.py
botapp/config/: defaults.py  tests.py
botapp/handlers/: main.py  test_utils.py  tests.py  utils.py
server/: __init__.py  __main__.py  client.py  client2.py  command_handlers.py  conftest.py  models.py  server.py  test_server.py  utils.py
server/config/: defaults.py  tests.py
